--- a/_config.yml
+++ b/_config.yml
@@ -256,7 +256,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: false
-      comments: true
+      comments: false
       share: false
       related: false
 
