--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,6 @@ author:
   name             : "cool8jay"
   avatar           : "https://avatars2.githubusercontent.com/u/55504?s=400&u=3d327ca950fd786c3f9ae093383ae147021b95e7&v=4" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "iOS/Mac developer.<br/>Only discuss ideas."
-  location         : "Chengdu, China"
   email            : "cool8jay@gmail.com"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
@@ -115,7 +114,7 @@ author:
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
-  twitter          : cool8jay
+  twitter          : 
   vine             :
   weibo            :
   xing             :
